[gd_scene load_steps=11 format=3 uid="uid://s3hpnc6xapdb"]

[ext_resource type="Script" path="res://FindObjective/game.gd" id="1_nbqab"]

[sub_resource type="BoxMesh" id="BoxMesh_4tsty"]
size = Vector3(20, 1, 20)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_8o67i"]
albedo_color = Color(0.396833, 1, 0.23, 1)

[sub_resource type="BoxMesh" id="BoxMesh_4u0uc"]
material = SubResource("StandardMaterial3D_8o67i")

[sub_resource type="ConcavePolygonShape3D" id="ConcavePolygonShape3D_cgvf4"]
data = PackedVector3Array(-0.5, 0.5, 0.5, 0.5, 0.5, 0.5, -0.5, -0.5, 0.5, 0.5, 0.5, 0.5, 0.5, -0.5, 0.5, -0.5, -0.5, 0.5, 0.5, 0.5, -0.5, -0.5, 0.5, -0.5, 0.5, -0.5, -0.5, -0.5, 0.5, -0.5, -0.5, -0.5, -0.5, 0.5, -0.5, -0.5, 0.5, 0.5, 0.5, 0.5, 0.5, -0.5, 0.5, -0.5, 0.5, 0.5, 0.5, -0.5, 0.5, -0.5, -0.5, 0.5, -0.5, 0.5, -0.5, 0.5, -0.5, -0.5, 0.5, 0.5, -0.5, -0.5, -0.5, -0.5, 0.5, 0.5, -0.5, -0.5, 0.5, -0.5, -0.5, -0.5, 0.5, 0.5, 0.5, -0.5, 0.5, 0.5, 0.5, 0.5, -0.5, -0.5, 0.5, 0.5, -0.5, 0.5, -0.5, 0.5, 0.5, -0.5, -0.5, -0.5, 0.5, 0.5, -0.5, 0.5, -0.5, -0.5, -0.5, 0.5, -0.5, 0.5, 0.5, -0.5, -0.5, -0.5, -0.5, -0.5)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_7qtoe"]
albedo_color = Color(1, 0.23, 0.23, 1)

[sub_resource type="BoxMesh" id="BoxMesh_ishic"]
material = SubResource("StandardMaterial3D_7qtoe")

[sub_resource type="ConcavePolygonShape3D" id="ConcavePolygonShape3D_cfefs"]
data = PackedVector3Array(-0.5, 0.5, 0.5, 0.5, 0.5, 0.5, -0.5, -0.5, 0.5, 0.5, 0.5, 0.5, 0.5, -0.5, 0.5, -0.5, -0.5, 0.5, 0.5, 0.5, -0.5, -0.5, 0.5, -0.5, 0.5, -0.5, -0.5, -0.5, 0.5, -0.5, -0.5, -0.5, -0.5, 0.5, -0.5, -0.5, 0.5, 0.5, 0.5, 0.5, 0.5, -0.5, 0.5, -0.5, 0.5, 0.5, 0.5, -0.5, 0.5, -0.5, -0.5, 0.5, -0.5, 0.5, -0.5, 0.5, -0.5, -0.5, 0.5, 0.5, -0.5, -0.5, -0.5, -0.5, 0.5, 0.5, -0.5, -0.5, 0.5, -0.5, -0.5, -0.5, 0.5, 0.5, 0.5, -0.5, 0.5, 0.5, 0.5, 0.5, -0.5, -0.5, 0.5, 0.5, -0.5, 0.5, -0.5, 0.5, 0.5, -0.5, -0.5, -0.5, 0.5, 0.5, -0.5, 0.5, -0.5, -0.5, -0.5, 0.5, -0.5, 0.5, 0.5, -0.5, -0.5, -0.5, -0.5, -0.5)

[sub_resource type="BoxShape3D" id="BoxShape3D_74bkw"]

[sub_resource type="BoxMesh" id="BoxMesh_qlt62"]

[node name="Game" type="Node3D" node_paths=PackedStringArray("room", "agent", "character")]
script = ExtResource("1_nbqab")
room = NodePath("Room")
agent = NodePath("Room/Agent")
character = NodePath("Scene/Agent")

[node name="Room" type="Room" parent="." node_paths=PackedStringArray("agents")]
agents = [NodePath("Agent")]

[node name="Agent" type="Agent" parent="Room"]

[node name="Scene" type="Node3D" parent="."]

[node name="MeshInstance3D" type="MeshInstance3D" parent="Scene"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.5, 0)
mesh = SubResource("BoxMesh_4tsty")
skeleton = NodePath("../..")

[node name="Big" type="Area3D" parent="Scene"]

[node name="Positive" type="MeshInstance3D" parent="Scene/Big"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 9, 1, 9)
mesh = SubResource("BoxMesh_4u0uc")
skeleton = NodePath("../..")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Scene/Big"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 9, 1, 9)
shape = SubResource("ConcavePolygonShape3D_cgvf4")

[node name="Small" type="Area3D" parent="Scene"]

[node name="Lower" type="MeshInstance3D" parent="Scene/Small"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -9, 1, -9.00341)
mesh = SubResource("BoxMesh_ishic")
skeleton = NodePath("../..")

[node name="CollisionShape3D2" type="CollisionShape3D" parent="Scene/Small"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -9, 1, -9.00341)
shape = SubResource("ConcavePolygonShape3D_cfefs")

[node name="Agent" type="CharacterBody3D" parent="Scene"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Scene/Agent"]
shape = SubResource("BoxShape3D_74bkw")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Scene/Agent"]
mesh = SubResource("BoxMesh_qlt62")

[connection signal="started" from="Room" to="." method="_on_room_started"]
[connection signal="body_entered" from="Scene/Big" to="." method="_on_big_body_entered"]
[connection signal="body_entered" from="Scene/Small" to="." method="_on_small_body_entered"]
